--- a/ERPDAL/ERPDAL.csproj
+++ b/ERPDAL/ERPDAL.csproj
@@ -163,6 +163,10 @@
     <Compile Include="AgricultureContextMigrations\202211161036145_Agriculture_priceinde.Designer.cs">
       <DependentUpon>202211161036145_Agriculture_priceinde.cs</DependentUpon>
     </Compile>
+    <Compile Include="AgricultureContextMigrations\202211171033546_Agriculture_stockiestAddField.cs" />
+    <Compile Include="AgricultureContextMigrations\202211171033546_Agriculture_stockiestAddField.Designer.cs">
+      <DependentUpon>202211171033546_Agriculture_stockiestAddField.cs</DependentUpon>
+    </Compile>
     <Compile Include="AgricultureContextMigrations\Configuration.cs" />
     <Compile Include="AgricultureDAL\AgricultureBaseRepository.cs" />
     <Compile Include="AgricultureDAL\AgricultureDbContext.cs" />
@@ -268,6 +272,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="AgricultureContextMigrations\202211161036145_Agriculture_priceinde.resx">
       <DependentUpon>202211161036145_Agriculture_priceinde.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AgricultureContextMigrations\202211171033546_Agriculture_stockiestAddField.resx">
+      <DependentUpon>202211171033546_Agriculture_stockiestAddField.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ControlPanelContextMigrations\202006151000333_ControlPanel_AllEntities_16-May-2020.resx">
       <DependentUpon>202006151000333_ControlPanel_AllEntities_16-May-2020.cs</DependentUpon>
