--- a/ERPDAL/ERPDAL.csproj
+++ b/ERPDAL/ERPDAL.csproj
@@ -167,6 +167,10 @@
     <Compile Include="AgricultureContextMigrations\202211171033546_Agriculture_stockiestAddField.Designer.cs">
       <DependentUpon>202211171033546_Agriculture_stockiestAddField.cs</DependentUpon>
     </Compile>
+    <Compile Include="AgricultureContextMigrations\202211200907477_Priceconfiguration.cs" />
+    <Compile Include="AgricultureContextMigrations\202211200907477_Priceconfiguration.Designer.cs">
+      <DependentUpon>202211200907477_Priceconfiguration.cs</DependentUpon>
+    </Compile>
     <Compile Include="AgricultureContextMigrations\Configuration.cs" />
     <Compile Include="AgricultureDAL\AgricultureBaseRepository.cs" />
     <Compile Include="AgricultureDAL\AgricultureDbContext.cs" />
@@ -275,6 +279,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="AgricultureContextMigrations\202211171033546_Agriculture_stockiestAddField.resx">
       <DependentUpon>202211171033546_Agriculture_stockiestAddField.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AgricultureContextMigrations\202211200907477_Priceconfiguration.resx">
+      <DependentUpon>202211200907477_Priceconfiguration.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ControlPanelContextMigrations\202006151000333_ControlPanel_AllEntities_16-May-2020.resx">
       <DependentUpon>202006151000333_ControlPanel_AllEntities_16-May-2020.cs</DependentUpon>
