new salesinfodetails status

--- a/ERPDAL/ERPDAL.csproj
+++ b/ERPDAL/ERPDAL.csproj
@@ -171,6 +171,10 @@
     <Compile Include="AgricultureContextMigrations\202211200907477_Priceconfiguration.Designer.cs">
       <DependentUpon>202211200907477_Priceconfiguration.cs</DependentUpon>
     </Compile>
+    <Compile Include="AgricultureContextMigrations\202211210730445_Agriculture_SelesStatus.cs" />
+    <Compile Include="AgricultureContextMigrations\202211210730445_Agriculture_SelesStatus.Designer.cs">
+      <DependentUpon>202211210730445_Agriculture_SelesStatus.cs</DependentUpon>
+    </Compile>
     <Compile Include="AgricultureContextMigrations\Configuration.cs" />
     <Compile Include="AgricultureDAL\AgricultureBaseRepository.cs" />
     <Compile Include="AgricultureDAL\AgricultureDbContext.cs" />
@@ -282,6 +286,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="AgricultureContextMigrations\202211200907477_Priceconfiguration.resx">
       <DependentUpon>202211200907477_Priceconfiguration.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AgricultureContextMigrations\202211210730445_Agriculture_SelesStatus.resx">
+      <DependentUpon>202211210730445_Agriculture_SelesStatus.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ControlPanelContextMigrations\202006151000333_ControlPanel_AllEntities_16-May-2020.resx">
       <DependentUpon>202006151000333_ControlPanel_AllEntities_16-May-2020.cs</DependentUpon>
