--- a/ERPDAL/ERPDAL.csproj
+++ b/ERPDAL/ERPDAL.csproj
@@ -175,6 +175,10 @@
     <Compile Include="AgricultureContextMigrations\202211210730445_Agriculture_SelesStatus.Designer.cs">
       <DependentUpon>202211210730445_Agriculture_SelesStatus.cs</DependentUpon>
     </Compile>
+    <Compile Include="AgricultureContextMigrations\202211231118500_RMTrack.cs" />
+    <Compile Include="AgricultureContextMigrations\202211231118500_RMTrack.Designer.cs">
+      <DependentUpon>202211231118500_RMTrack.cs</DependentUpon>
+    </Compile>
     <Compile Include="AgricultureContextMigrations\Configuration.cs" />
     <Compile Include="AgricultureDAL\AgricultureBaseRepository.cs" />
     <Compile Include="AgricultureDAL\AgricultureDbContext.cs" />
@@ -289,6 +293,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="AgricultureContextMigrations\202211210730445_Agriculture_SelesStatus.resx">
       <DependentUpon>202211210730445_Agriculture_SelesStatus.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AgricultureContextMigrations\202211231118500_RMTrack.resx">
+      <DependentUpon>202211231118500_RMTrack.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ControlPanelContextMigrations\202006151000333_ControlPanel_AllEntities_16-May-2020.resx">
       <DependentUpon>202006151000333_ControlPanel_AllEntities_16-May-2020.cs</DependentUpon>
