--- a/ERPWeb/ERPWeb.csproj
+++ b/ERPWeb/ERPWeb.csproj
@@ -310,6 +310,7 @@
     <Content Include="Content\LogIn\fonts\fontawesome-webfont.woff" />
     <Content Include="Content\LogIn\fonts\fontawesome-webfont.woff2" />
     <Content Include="Content\LogIn\fonts\FontAwesome.otf" />
+    <Content Include="Scripts\canvasjs.js" />
     <Content Include="wwwroot\assets\build\config\postcss.config.js" />
     <Content Include="wwwroot\assets\build\config\rollup.config.js" />
     <Content Include="wwwroot\assets\build\js\AdminLTE.js" />
