--- a/ERPBO/ERPBO.csproj
+++ b/ERPBO/ERPBO.csproj
@@ -162,6 +162,7 @@
     <Compile Include="Agriculture\DTOModels\ZoneSetupDTO.cs" />
     <Compile Include="Agriculture\DTOModels\ZoneUserDTO.cs" />
     <Compile Include="Agriculture\ReportModels\DateWiseCollectionReport.cs" />
+    <Compile Include="Agriculture\ReportModels\FinishGoodProductionAcceptDataReport.cs" />
     <Compile Include="Agriculture\ReportModels\FinishGoodProductionDataReport.cs" />
     <Compile Include="Agriculture\ReportModels\FinishGoodStockReport.cs" />
     <Compile Include="Agriculture\ReportModels\GetSendAndReceiveReportData.cs" />
