--- a/ERPDAL/ERPDAL.csproj
+++ b/ERPDAL/ERPDAL.csproj
@@ -183,6 +183,10 @@
     <Compile Include="AgricultureContextMigrations\202211260543091_Agriculture_RMPurchaseRMCode.Designer.cs">
       <DependentUpon>202211260543091_Agriculture_RMPurchaseRMCode.cs</DependentUpon>
     </Compile>
+    <Compile Include="AgricultureContextMigrations\202211290634382_ProductionCOst.cs" />
+    <Compile Include="AgricultureContextMigrations\202211290634382_ProductionCOst.Designer.cs">
+      <DependentUpon>202211290634382_ProductionCOst.cs</DependentUpon>
+    </Compile>
     <Compile Include="AgricultureContextMigrations\Configuration.cs" />
     <Compile Include="AgricultureDAL\AgricultureBaseRepository.cs" />
     <Compile Include="AgricultureDAL\AgricultureDbContext.cs" />
@@ -303,6 +307,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="AgricultureContextMigrations\202211260543091_Agriculture_RMPurchaseRMCode.resx">
       <DependentUpon>202211260543091_Agriculture_RMPurchaseRMCode.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AgricultureContextMigrations\202211290634382_ProductionCOst.resx">
+      <DependentUpon>202211290634382_ProductionCOst.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ControlPanelContextMigrations\202006151000333_ControlPanel_AllEntities_16-May-2020.resx">
       <DependentUpon>202006151000333_ControlPanel_AllEntities_16-May-2020.cs</DependentUpon>
