--- a/ERPBLL/ERPBLL.csproj
+++ b/ERPBLL/ERPBLL.csproj
@@ -143,6 +143,7 @@
     <Compile Include="Agriculture\Interface\IMRawMaterialIssueStockInfo.cs" />
     <Compile Include="Agriculture\Interface\IPRawMaterialStockIDetails.cs" />
     <Compile Include="Agriculture\Interface\IPRawMaterialStockInfo.cs" />
+    <Compile Include="Agriculture\Interface\IProductionPerproductCost.cs" />
     <Compile Include="Agriculture\Interface\IProductPriceConfiguration.cs" />
     <Compile Include="Agriculture\Interface\IProductPricingHistory.cs" />
     <Compile Include="Agriculture\Interface\IRawMaterialBusiness.cs" />
@@ -175,6 +176,7 @@
     <Compile Include="Agriculture\MRawMaterialIssueStockInfoBusisness.cs" />
     <Compile Include="Agriculture\PRawMaterialStockIDetailsBusiness.cs" />
     <Compile Include="Agriculture\PRawMaterialStockInfoBusiness.cs" />
+    <Compile Include="Agriculture\ProductionPerproductCostBusiness.cs" />
     <Compile Include="Agriculture\ProductPriceConfigurationBusiness.cs" />
     <Compile Include="Agriculture\ProductPricingHistoryBusiness.cs" />
     <Compile Include="Agriculture\RawMaterialBusiness.cs" />
