--- a/ERPBO/ERPBO.csproj
+++ b/ERPBO/ERPBO.csproj
@@ -232,6 +232,7 @@
     <Compile Include="Common\CustomPrincipalSerializeModel.cs" />
     <Compile Include="Common\Dropdown.cs" />
     <Compile Include="Common\ExecutionStateWithText.cs" />
+    <Compile Include="Common\GetAllMonth.cs" />
     <Compile Include="Common\Last30DaysPaymentGraph.cs" />
     <Compile Include="Common\Last30DaysSalesGraph.cs" />
     <Compile Include="Common\UserInformation.cs" />
